[gd_scene load_steps=29 format=2]

[ext_resource path="res://Ship1.PNG" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Meteor.gd" type="Script" id=3]
[ext_resource path="res://rock-a.png" type="Texture" id=4]
[ext_resource path="res://back1.png" type="Texture" id=5]
[ext_resource path="res://exp2_0.png" type="Texture" id=6]
[ext_resource path="res://beams.png" type="Texture" id=7]
[ext_resource path="res://Bullet.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ null, SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "explosion",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.3192, 25.3036 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 20 )

[sub_resource type="RectangleShape2D" id=20]

[node name="Game" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explosion" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "explosion"

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="SpriteShip" type="Sprite" parent="Player"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Meteor" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="rock-a" type="Sprite" parent="Meteor"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteor"]
shape = SubResource( 2 )

[node name="Bullet" type="KinematicBody2D" parent="."]
visible = false
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Bullet"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 310, 44, 40, 80 )

[node name="MainLabel" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 250.0
margin_right = 540.0
margin_bottom = 290.0
rect_scale = Vector2( 5, 5 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MainTimer" to="Meteor" method="_on_Timer_timeout"]
